# CrewAI_Tutorials

./: README.md
trip_planner_from_scratch/: agents.py  main.py  pyproject.toml  tasks.py
trip_planner_from_scratch/tools/: search_tools.py
